# satdatakit

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
examples/: 01_quickstart.ipynb  02_dask_scaling.ipynb
extensions/: __init__.py  dask_ext.py  stac_ext.py  zarr_ext.py
src/satdatakit/: __init__.py  core.py  indices.py  io.py  pipeline.py
src/satdatakit/extensions/: dask_ext.py
src/satdatakit/readers/: __init__.py  geotiff.py  hdf.py  netcdf.py  safe.py
tests/: test_core.py  test_indices.py  test_io.py  test_pipeline.py
